--- a/OnionArchitectureGuide.Persistence/OnionArchitectureGuide.Persistence.csproj
+++ b/OnionArchitectureGuide.Persistence/OnionArchitectureGuide.Persistence.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\OnionArchitectureGuide.Application.Abstraction\OnionArchitectureGuide.Application.Abstraction.csproj" />
     <ProjectReference Include="..\OnionArchitectureGuide.Domain\OnionArchitectureGuide.Domain.csproj" />
   </ItemGroup>
