--- a/OnionArchitectureGuide.Api/appsettings.json
+++ b/OnionArchitectureGuide.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.; Database=OnionArchitectureGuides; Trusted_Connection=True; Integrated Security=True; TrustServerCertificate=True;"
+  }
 }
