--- a/OnionArchitectureGuide.Api/OnionArchitectureGuide.Api.csproj
+++ b/OnionArchitectureGuide.Api/OnionArchitectureGuide.Api.csproj
@@ -7,11 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\OnionArchitectureGuide.Application.Abstraction\OnionArchitectureGuide.Application.Abstraction.csproj" />
+    <ProjectReference Include="..\OnionArchitectureGuide.DependencyManager\OnionArchitectureGuide.DependencyManager.csproj" />
   </ItemGroup>
 
 </Project>
